<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.ForgotPasswordActivity"
    android:background="@color/gm_background"
    android:padding="24dp">

    <LinearLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="36sp"
            android:textStyle="bold"
            android:textColor="@color/gm_text">
        </TextView>

        <TextView
            android:id="@+id/tvSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/forgot_recover_password"
            android:textColor="@color/gm_text"
            android:textSize="18sp">
        </TextView>

        <TextView
            android:id="@+id/tvSubtitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/forgot_instruction"
            android:textColor="@color/gm_text_secondary"
            android:textSize="18sp"
            android:gravity="center">
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layoutHeader"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColorHint="@color/gm_text_secondary"
            app:boxBackgroundColor="#1E1E1E"
            app:boxStrokeColor="@color/input_box_stroke"
            app:boxStrokeWidth="1dp"
            app:boxCornerRadiusTopStart="14dp"
            app:boxCornerRadiusTopEnd="14dp"
            app:boxCornerRadiusBottomStart="14dp"
            app:boxCornerRadiusBottomEnd="14dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/gm_text"
                >
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnSendLink"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            android:text="@string/forgot_send_link"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:backgroundTint="@color/gm_primary"
            app:cornerRadius="28dp"
            >
        </Button>


    </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSubtitle3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_remember_password"
                android:textColor="@color/gm_text_secondary"
                android:textSize="14sp">

            </TextView>

            <TextView
                android:id="@+id/tvLinkLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/tv_login"
                android:textColor="@color/gm_primary"
                android:textSize="14sp"
                android:textStyle="bold">

            </TextView>

        </LinearLayout>







</androidx.constraintlayout.widget.ConstraintLayout>