<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginActivity"
    android:background="@color/gym_background"
    android:padding="24dp">

    <LinearLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="36sp"
            android:textStyle="bold"
            android:textColor="@color/gym_text_primary">
        </TextView>

        <TextView
            android:id="@+id/tvSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/subtitle_login"
            android:textColor="@color/gym_text_secondary"
            android:textSize="18sp">
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layoutHeader"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColorHint="@color/gym_text_secondary"
            app:boxBackgroundColor="#1E1E1E"
            app:boxStrokeColor="@color/input_box_stroke"
            app:boxStrokeWidth="1dp"
            app:boxCornerRadiusTopStart="14dp"
            app:boxCornerRadiusTopEnd="14dp"
            app:boxCornerRadiusBottomStart="14dp"
            app:boxCornerRadiusBottomEnd="14dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/gym_text_primary"
                >
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            android:textColorHint="@color/gym_text_secondary"
            app:boxBackgroundColor="#1E1E1E"
            app:boxStrokeColor="@color/input_box_stroke"
            app:boxStrokeWidth="1dp"
            app:boxCornerRadiusTopStart="14dp"
            app:boxCornerRadiusTopEnd="14dp"
            app:boxCornerRadiusBottomStart="14dp"
            app:boxCornerRadiusBottomEnd="14dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/gym_text_secondary"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/gym_text_primary">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/login_forgot_password"
            android:layout_gravity="end"
            android:textColor="@color/gym_text_secondary"
            >

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/btn_login"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:backgroundTint="@color/gym_green"
            app:cornerRadius="28dp">
        </Button>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSubtitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_dont_have_account"
                android:textColor="@color/gym_text_secondary"
                android:textSize="14sp">

            </TextView>

            <TextView
                android:id="@+id/tvLinkLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/login_sign_up"
                android:textColor="@color/gym_green"
                android:textSize="14sp"
                android:textStyle="bold">

            </TextView>

        </LinearLayout>

    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>